--- a/app/styles/css/sass/_colors.sass
+++ b/app/styles/css/sass/_colors.sass
@@ -1,5 +1,11 @@
 $grey1: #AFAFAF
 $white: #ffffff
-$blue: #0064d2
+$blue:  #0064d2
 $grey2: #88919c
 $grey3: #d2d4d6
+$grey4: #eeeff1
+$grey5: #E0E4E5
+$grey6: #A5A8AC
+$grey7: #4e4d4c
+$grey8: #858F93
+$black: #000000
