Changed to latest code base; Added Login page changes

--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -1,6 +1,7 @@
 @import 'sass/variables'
 @import 'sass/colors'
 @import 'sass/fonts'
+@import 'sass/utils'
 @import 'sass/components' 
 @import 'sass/base' 
 @import 'sass/header'
