--- a/app/styles/css/sass/_colors.sass
+++ b/app/styles/css/sass/_colors.sass
@@ -1,5 +1,11 @@
-$grey1: #AFAFAF
 $white: #ffffff
+$black: #000000
+
 $blue: #0064d2
+$blue1: #3C71CB
+
+$grey1: #AFAFAF
 $grey2: #88919c
 $grey3: #d2d4d6
+$light-grey: #b3b2b2
+$faded-grey: #cad1d4
