--- a/app/styles/css/sass/_base.sass
+++ b/app/styles/css/sass/_base.sass
@@ -1,12 +1,2 @@
-=text-ellipsis
-	overflow: hidden
-	white-space: nowrap
-	text-overflow: ellipsis
-	
-=text-center-n-bold
-	text-align: center
-	font-weight: bold
-	
-=float-right-10
-	float: right
-	margin-right: 10px
+\::-webkit-input-placeholder
+	color: $light-grey
