--- a/app/styles/css/scheduledMeeting.css
+++ b/app/styles/css/scheduledMeeting.css
@@ -4,6 +4,11 @@
     font-size: 14px;
 }
 
+.cms-sm-meetingMasterContainer{
+    padding-bottom:60px;
+
+}
+
 
 .cms-sm-meetingContainer{
     padding-top: 16px;
