--- a/app/styles/css/home.css
+++ b/app/styles/css/home.css
@@ -55,3 +55,23 @@
     height: 30px;
     font-size: 15px;
 }
+
+/* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution */
+
+@media (min-device-width: 720px) and (min-device-height: 1080px){
+ 
+.cms-home-group-item{
+                height: 145px !important;
+                padding: 35px 23px !important;
+}
+ 
+}
+
+@media (min-device-width: 1080px) and (min-device-height: 1920px){
+ 
+.cms-home-group-item{
+                height: 145px !important;
+                padding: 35px 23px !important;
+}
+ 
+}
