--- a/app/styles/css/notifyTeamLeadership.css
+++ b/app/styles/css/notifyTeamLeadership.css
@@ -47,33 +47,33 @@
     border-radius:5px;
     font-style:normal;
     border: 1px solid #E0E4E5;
+    width:100%;
 }
 
 .cms-nl-button{
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #273ef6), color-stop(1, #273ef6) );
-    background:-moz-linear-gradient( center top, #2952F6 5%, #2952F6 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#2952F6', endColorstr='#273EF6');
-    background-color: #2952F6;
-    border-radius:10px;
-    text-indent:0px;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #273ef6), color-stop(1, #0354a2) );
+    background-color: #0354a2;
+    border-radius:5px;
     display:inline-block;
     color:#ffffff;
     font-family:sans-serif;
-    font-size:13px;
+    font-size:16px;
     font-weight:bold;
     font-style:normal;
-    height:35px;
-    line-height:31px;
+    height:40px;
+    line-height:40px;
     width: 100%;
     text-decoration:none;
     text-align:center;
-    text-shadow:0px 0px 0px #1570cd;
-    margin-top: 20px;
+    margin-top: 18px;
 }
+
+
+
 
 .cms-nl-masterContainer
 {
-    padding: 20px 15px 20px 15px;
+    padding: 20px 15px 80px 15px;
 }
 .cms-nl-eventTypeSelect
 {
@@ -102,4 +102,14 @@
     border-top: 1px solid #cccccc;
     width: 100%;
     margin:10px 0 10px 0;
+}
+
+/* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution */
+
+@media screen and (min-device-width: 720px),screen and (min-device-width: 1080px){
+ 
+.cms-nl-button{
+        margin-top: 55px;
+}
+ 
 }
