--- a/app/styles/css/sass/_footer.sass
+++ b/app/styles/css/sass/_footer.sass
@@ -4,8 +4,8 @@
   text-align: center
   float: left
   width: 25%
-  font-size: $base_font_size
-  font-family: "HelveticaNeue"
+  font-size: $footer-font-size
+  font-family: $std-font-normal
   color: $grey2
   margin-top: 8px
 
