--- a/app/styles/css/sass/_header.sass
+++ b/app/styles/css/sass/_header.sass
@@ -7,7 +7,7 @@
   padding-bottom: 14px
 
 .cms-header-pageTitle
-  font-size: $title_font_size
+  font-size: $title-font-size
   color: $blue
   +text-center-n-bold
   width: 62%
@@ -47,7 +47,7 @@
 .cms-header-backButtonContainer
   padding-top: 22px
   left: 15px
-  font-size: $title_font_size
+  font-size: $title-font-size
   color: $blue
   +text-center-n-bold
   width: 15%
