--- a/app/styles/css/sass/_fonts.sass
+++ b/app/styles/css/sass/_fonts.sass
@@ -1,5 +1,15 @@
 $std-font-normal: 'HelveticaNeue'
 $std-font-light: $std-font-normal + '-Light'
-$std-font-thin: $std-font-normal + '-UltraLight'
+$std-font-ultra-light: $std-font-normal + '-UltraLight'
+$std-font-thin: $std-font-normal + '-Thin'
 
 $base-font-size: 16px
+$heading-font-size: $base-font-size + 4
+$content-font-size: 12px
+
+$footer-font-size: 10px
+$title-font-size: $base-font-size + 1
+
+$badge-font-size: $base-font-size - 1
+$list-font-size: $base-font-size + 2
+$list-icon-size: 75px
