--- a/app/styles/css/sass/pages/_login.sass
+++ b/app/styles/css/sass/pages/_login.sass
@@ -18,7 +18,7 @@
   font-size: 90pt
   text-align: center
   line-height: 100px
-  font-family: $std-font-thin
+  font-family: $std-font-ultra-light
 
 .cms-login-headerLabelPart2
   color: $black
