creating separate pages for each pages Replacing font-size and colors with variabes

--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -9,3 +9,12 @@
 
 /*** include pages ***/ 
 @import 'sass/pages/login'
+@import 'sass/pages/respondToCrisis'
+@import 'sass/pages/respondToCrisisLeadership'
+@import 'sass/pages/scheduleAMeeting'
+@import 'sass/pages/scheduledMeeting'
+@import 'sass/pages/selectTeam'
+@import 'sass/pages/sendAlert'
+@import 'sass/pages/viewDocumentsList'
+@import 'sass/pages/viewWalletCard'
+@import 'sass/pages/walletCardList'
