--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -1,2 +1,9 @@
 $base_font_size: 10px
 $title_font_size: 17px
+$section_heading_size: 16px
+$content_font_size: 13pt
+$content_container_size: 14px
+$content_small_size: 13px
+$content_medium_size: 15px
+$content_large_font: 21px
+$content_x_large_font: 21px
