--- a/app/styles/css/sass/_colors.sass
+++ b/app/styles/css/sass/_colors.sass
@@ -3,6 +3,8 @@ $black: #000000
 
 $blue: #0064d2
 $blue1: #3C71CB
+$blue2: #0354a2
+$blue3: #273ef6
 
 $grey1: #AFAFAF
 $grey2: #88919c
@@ -12,5 +14,10 @@ $grey5: #E0E4E5
 $grey6: #A5A8AC
 $grey7: #4e4d4c
 $grey8: #858F93
+$grey9: #d8dde1
+$grey10: #ECF0F3
+$grey11: #cccccc
+$grey12: #DEE1E4
+$grey13: #6f7a80
 $light-grey: #b3b2b2
 $faded-grey: #cad1d4
