--- a/app/styles/css/sass/_footer.sass
+++ b/app/styles/css/sass/_footer.sass
@@ -1,6 +1,6 @@
 .cms-footer-image-group
   position: relative
-  padding: 0 10px 0 10px
+  padding: 0 10px 6px 10px
   text-align: center
   float: left
   width: 25%
@@ -43,7 +43,7 @@
 .cms-footer
   background: $white
   width: 100%
-  border-top: 1px solid $grey1
+  +border-position('top', $grey1)
 
 .cms-footer-disabledLink
   pointer-events: none
@@ -52,5 +52,5 @@
   height: 28px
 
 .cms-footer-masterContainer
-  border: 1px solid $grey3
+  +border($grey3)
   background: $white
