--- a/app/styles/css/sass/pages/_home.sass
+++ b/app/styles/css/sass/pages/_home.sass
@@ -4,46 +4,49 @@
   padding-top: 54px
 
 .cms-home-heading
-  font-family: $std-font-normal
-  font-size: $base-font-size
-  font-weight: normal
-  padding-left: 23px
-  padding-top: 25px
+  /*  font-family: $std-font-normal
+    font-size: $base-font-size
+    font-weight: normal
+    padding-left: $list-side-spacing
+    padding-top: 25px*/
+
 
 .cms-home-list
-  padding-left: 0
-  margin-bottom: 0px
+  padding-left: $zero
+  margin-bottom: $zero
 
 .cms-home-group-item
   background-color: $grey-background
 
 .cms-home-listImageContainer
-  float: left
+  display: inline-block
   position: relative
 
 .cms-home-listImageText
-  float: left
+  display: inline-block
   position: relative
   color: $black
   width: 70%
   font-family: $std-font-light
   font-size: $list-font-size
-  padding-top: 20px
+  //padding-top: 20px
+  vertical-align: middle
+  padding-left: $list-side-spacing
 
 .cms-home-headingIcon
-  height: 75px
-  width: 75px
+  height: $list-icon-size
+  width: $list-icon-size
 
 .badge
   font-family: $std-font-light
   position: absolute
-  margin: 7px 0 0 55px
-  background-color: #e62828
+  margin: 7px $zero $zero 55px
+  background-color: $red1
   padding: 4px
   border-radius: 22px
   +border($grey4, 3px)
-  width: 30px
-  height: 30px
+  width: $badge-size
+  height: $badge-size
   font-size: $badge-font-size
 
 /* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
@@ -51,9 +54,9 @@
 @media (min-device-width: 720px) and (min-device-height: 1080px)
   .cms-home-group-item
     height: 145px !important
-    padding: 35px 23px !important
+    padding: 35px $list-side-spacing !important
 
 @media (min-device-width: 1080px) and (min-device-height: 1920px)
   .cms-home-group-item
     height: 145px !important
-    padding: 35px 23px !important
+    padding: 35px $list-side-spacing !important
