updated variables and fonts

--- a/app/styles/css/sass/_fonts.sass
+++ b/app/styles/css/sass/_fonts.sass
@@ -13,3 +13,10 @@ $title-font-size: $base-font-size + 1
 $badge-font-size: $base-font-size - 1
 $list-font-size: $base-font-size + 2
 $list-icon-size: 75px
+
+$content_font_size: 13pt
+$content_container_size: 14px
+$content_small_size: 13px
+$content_medium_size: 15px
+$content_large_font: 21px
+$content_x_large_font: 22px
