--- a/app/styles/css/sass/pages/_scheduleAMeeting.sass
+++ b/app/styles/css/sass/pages/_scheduleAMeeting.sass
@@ -51,7 +51,7 @@
 .cms-scheduleMeeting-startMeetingButton
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, $blue), color-stop(1, $blue2))
   color: $white
-  font-size: $section_heading_size
+  font-size: $base-font-size
   line-height: 40px
   width: 100%
   text-decoration: none
