--- a/app/styles/css/sass/pages/_respondToCrisis.sass
+++ b/app/styles/css/sass/pages/_respondToCrisis.sass
@@ -1,6 +1,6 @@
 .cms-rc-sectionHeading
   font-family: "HelveticaNeue"
-  font-size: $section_heading_size
+  font-size: $base-font-size
   font-weight: normal
   padding: 19px 0 0 23px
 
