--- a/app/styles/css/sass/pages/_sendAlert.sass
+++ b/app/styles/css/sass/pages/_sendAlert.sass
@@ -38,7 +38,7 @@
   display: inline-block
   color: $white
   font-family: sans-serif
-  font-size: $section_heading_size
+  font-size: $base-font-size
   font-style: normal
   height: 40px
   line-height: 40px
