Crisis List View Changes : Changed table-cell layout to be responsive

--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -4,3 +4,8 @@ $badge-radius: 22px
 $list-side-spacing: 23px
 
 $zero: 0
+
+$footer-space: 53px
+
+$crisis-list-item-height: 90px
+$crisis-item-spacing: 15px
