--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -8,8 +8,9 @@
 @import 'sass/footer' 
 
 /*** include pages ***/ 
-@import 'sass/pages/login'
+@import 'sass/pages/crisisListView'
 @import 'sass/pages/home'
+@import 'sass/pages/login'
 @import 'sass/pages/respondToCrisis'
 @import 'sass/pages/respondToCrisisLeadership'
 @import 'sass/pages/scheduleAMeeting'
