--- a/app/styles/css/sass/_footer.sass
+++ b/app/styles/css/sass/_footer.sass
@@ -1,16 +1,10 @@
 .cms-footer-image-group
-  position: relative
-  padding: 0 10px 6px 10px
+  padding: 7px 10px
   text-align: center
   float: left
   width: 25%
   font-size: $footer-font-size
   font-family: $std-font-normal
-  color: $grey2
-  margin-top: 8px
-
-.cms-footer-active-crisis-active, .cms-footer-respond-active, .cms-footer-policies-active, .cms-footer-wallet-card-active
-  color: $grey2
 
 .cms-footer-active-crisis, .cms-footer-respond, .cms-footer-policies, .cms-footer-wallet-card
   color: $blue
@@ -44,13 +38,10 @@
   background: $white
   width: 100%
   +border-position('top', $grey1)
+  color: $grey2
 
 .cms-footer-disabledLink
   pointer-events: none
 
 .cms-footer-icon
   height: 28px
-
-.cms-footer-masterContainer
-  +border($grey3)
-  background: $white
