Crisis Detail Changes - ther are  Changes in view too

--- a/app/styles/css/sass/_colors.sass
+++ b/app/styles/css/sass/_colors.sass
@@ -19,6 +19,7 @@ $grey10: #ECF0F3
 $grey11: #cccccc
 $grey12: #DEE1E4
 $grey13: #6f7a80
+$grey14: #F6F7FB
 $light-grey: #b3b2b2
 $faded-grey: #cad1d4
 $grey-background: $grey4
