--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -6,6 +6,13 @@ $list-side-spacing: 23px
 $zero: 0
 
 $footer-space: 53px
+$header-space: 60px
 
 $crisis-list-item-height: 90px
 $crisis-item-spacing: 15px
+$crisis-detail-arrow-size: 20px
+
+$std-side-spacing: 15px
+$std-top-spacing: 10px
+$std-small-spacing: 5px
+$medium-spacing: 8px
