--- a/app/styles/css/sass/pages/_home.sass
+++ b/app/styles/css/sass/pages/_home.sass
@@ -1,7 +1,8 @@
 .cms-home-container
   height: 100%
-  margin-top: -54px/*not needed for border boxing*/
-  padding-top: 54px
+  //not needed for border boxing
+  //margin-top: -54px
+  //padding-top: 54px
 
 .cms-home-heading
   /*  font-family: $std-font-normal
