--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -9,6 +9,7 @@
 
 /*** include pages ***/ 
 @import 'sass/pages/crisisListView'
+@import 'sass/pages/crisisDetail'
 @import 'sass/pages/home'
 @import 'sass/pages/login'
 @import 'sass/pages/respondToCrisis'
