--- a/app/styles/css/sass/_base.sass
+++ b/app/styles/css/sass/_base.sass
@@ -86,3 +86,11 @@ body
 	align: center
 	top: 0
 	left: 0
+
+.flex-vcenter
+	display: flex
+	align-items: center
+.zero-pad
+	padding: 0
+[ng-view]
+	padding-top: $header-space
