Added header, footer variables

--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -9,3 +9,7 @@ $footer-space: 53px
 
 $crisis-list-item-height: 90px
 $crisis-item-spacing: 15px
+$std-padding: 10px
+$header_icon_width: 25px
+$footer_icon_height: 28px
+$disabled_links_pointer-events: none
