Map Leaflet changes - Also made changes to MapController.js

--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -12,6 +12,7 @@
 @import 'sass/pages/crisisDetail'
 @import 'sass/pages/home'
 @import 'sass/pages/login'
+@import 'sass/pages/mapView'
 @import 'sass/pages/respondToCrisis'
 @import 'sass/pages/respondToCrisisLeadership'
 @import 'sass/pages/scheduleAMeeting'
