NotifyToLeadership changes - Changes in view is also there

--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -13,6 +13,7 @@
 @import 'sass/pages/home'
 @import 'sass/pages/login'
 @import 'sass/pages/mapView'
+@import 'sass/pages/notifyTeamLeadership'
 @import 'sass/pages/respondToCrisis'
 @import 'sass/pages/respondToCrisisLeadership'
 @import 'sass/pages/scheduleAMeeting'
