Request Resilency Base changes

--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -14,6 +14,7 @@
 @import 'sass/pages/login'
 @import 'sass/pages/mapView'
 @import 'sass/pages/notifyTeamLeadership'
+@import 'sass/pages/requestResiliencySupport'
 @import 'sass/pages/respondToCrisis'
 @import 'sass/pages/respondToCrisisLeadership'
 @import 'sass/pages/scheduleAMeeting'
