--- a/app/styles/css/sass/pages/_notifyTeamLeadership.sass
+++ b/app/styles/css/sass/pages/_notifyTeamLeadership.sass
@@ -24,7 +24,7 @@
 
 .cms-nl-button
   margin-top: 18px
-  +cms-color-button($blue2, $blue3, $white)
+  @extend .form-button
 
 .cms-nl-masterContainer
   padding: $std-side-spacing
