--- a/app/styles/css/sass/pages/_requestResiliencySupport.sass
+++ b/app/styles/css/sass/pages/_requestResiliencySupport.sass
@@ -9,8 +9,8 @@
   color: $blue
 
 .cms-rrs-sendAlertButton
-  +cms-color-button($blue2,$blue3,$white)
-
+  //can be used directly in view
+  @extend .form-button
 .cms-rrs-masterContainer
   padding: $std-side-spacing
   color: $grey7
