--- a/app/styles/css/sass/_components.sass
+++ b/app/styles/css/sass/_components.sass
@@ -12,12 +12,15 @@
   height: 40px
   width: 100%
 
-@mixin cms-color-button($background-color, $stopcolor, $content-color)
+=cms-color-button($background-color, $stopcolor, $content-color)
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.5, $stopcolor), color-stop(1, $background-color))
   background-color: $background-color
   color: $content-color
   @extend .cms-button
   +border($background-color)
+
+.form-button
+  +cms-color-button($blue2,$blue3,$white)
 
 .cms-textArea
   width: 100%
