--- a/app/styles/css/sass/pages/_sendAlert.sass
+++ b/app/styles/css/sass/pages/_sendAlert.sass
@@ -32,19 +32,7 @@
   margin-bottom: 5px
 
 .cms-sendAlert-sendAlertButton
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, $blue3), color-stop(1, $blue2))
-  background-color: $blue2
-  border-radius: 5px
-  display: inline-block
-  color: $white
-  font-family: sans-serif
-  font-size: $base-font-size
-  font-style: normal
-  height: 40px
-  line-height: 40px
-  width: 100%
-  text-decoration: none
-  +text-center-n-bold
+  @extend .form-button
   margin-top: 18px
 
 /* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
