Initiate Conference - Initial Changes

--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -11,6 +11,7 @@
 @import 'sass/pages/crisisListView'
 @import 'sass/pages/crisisDetail'
 @import 'sass/pages/home'
+@import 'sass/pages/initiateConference'
 @import 'sass/pages/login'
 @import 'sass/pages/mapView'
 @import 'sass/pages/notifyTeamLeadership'
