--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -17,6 +17,8 @@ $disabled_links_pointer-events: none
 
 $crisis-detail-arrow-size: 20px
 
+$initiate-conf-icon-size: 180px
+
 $std-side-spacing: 15px
 $std-top-spacing: 10px
 $std-small-spacing: 5px
