Incorporated input control classes in Schedule a meeting

--- a/app/styles/css/sass/_colors.sass
+++ b/app/styles/css/sass/_colors.sass
@@ -22,7 +22,9 @@ $grey13: #6f7a80
 $grey14: #F6F7FB
 $light-grey: #b3b2b2
 $faded-grey: #cad1d4
+
 $grey-background: $grey4
+$grey-input-border: $grey5
 
 $red1: #e62828
 
