--- a/app/styles/css/sass/_components.sass
+++ b/app/styles/css/sass/_components.sass
@@ -2,7 +2,7 @@
   height: 40px
   padding: $std-top-spacing
   border-radius: 5px
-  +border($light-grey)
+  +border($grey-input-border)
   width: 100%
 
 .cms-button
@@ -29,4 +29,4 @@
   color: $grey13
   padding: $std-top-spacing
   border-radius: 5px
-  +border($grey3)
+  +border($grey-input-border)
