--- a/app/styles/css/sass/pages/_crisisListView.sass
+++ b/app/styles/css/sass/pages/_crisisListView.sass
@@ -52,16 +52,16 @@
 
 .cms-clv-crisisType
   font-family: $std-font-normal
-  font-size: $content-font-size
+  font-size: $small-content-font-size
   @extend .ellipsis
 
 .cms-clv-crisisDate, .cms-clv-crisisTime
   font-family: $std-font-normal
-  font-size: $content-font-size
+  font-size: $small-content-font-size
 
 .cms-clv-crisisDurationTime
   font-family: $std-font-normal
-  font-size: $content-font-size
+  font-size: $small-content-font-size
   color: $blue
 
 .cms-clv-crisisDuration
