--- a/app/styles/css/sass/pages/_initiateConference.sass
+++ b/app/styles/css/sass/pages/_initiateConference.sass
@@ -20,6 +20,4 @@
 
 .cms-ic-conferenceButton
   margin-top: 3*$big-spacing
-  text-align: center
-  padding: $medium-spacing $zero
-  @extend .form-button
+  @extend .form-button-div
