--- a/app/styles/css/sass/pages/_notifyTeamLeadership.sass
+++ b/app/styles/css/sass/pages/_notifyTeamLeadership.sass
@@ -39,8 +39,7 @@
   margin: $big-spacing $zero $std-small-spacing
 
 .cms-nl-separator
-  +border-position('top', $grey11)
-  margin: $std-top-spacing 0
+  @extend .separator
 
 /* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
 
