--- a/app/styles/css/sass/pages/_requestResiliencySupport.sass
+++ b/app/styles/css/sass/pages/_requestResiliencySupport.sass
@@ -26,8 +26,7 @@
   margin: $std-small-spacing $zero
 
 .cms-rrs-requestDivider
-  +border_position('top',$grey11)
-  margin: $std-small-spacing $zero
+  @extend .separator
 
 /* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
 
