--- a/app/styles/css/sass/_fonts.sass
+++ b/app/styles/css/sass/_fonts.sass
@@ -5,7 +5,7 @@ $std-font-thin: $std-font-normal + '-Thin'
 
 $base-font-size: 16px
 $heading-font-size: $base-font-size + 4
-$content-font-size: 12px
+$small-content-font-size: 12px
 
 $footer-font-size: 10px
 $title-font-size: $base-font-size + 1
