--- a/app/styles/css/sass/pages/_login.sass
+++ b/app/styles/css/sass/pages/_login.sass
@@ -1,7 +1,8 @@
 .cms-login-masterContainer
   height: 90%
-  margin: 68px 15px
+  margin: 68px $std-side-spacing $std-top-spacing
   font-family: $std-font-normal
+
 
 .cms-login-inputControl
   color: $black
