Added Footerspace to each page containers individually

--- a/app/styles/css/sass/_base.sass
+++ b/app/styles/css/sass/_base.sass
@@ -95,7 +95,7 @@ body
   padding: 0
 
 [ng-view]
-  padding: $header-space 0 $footer-space
+  padding-top: $header-space
 
 .separator
   +border-position('top', $grey11)
