--- a/app/styles/css/sass/pages/_home.sass
+++ b/app/styles/css/sass/pages/_home.sass
@@ -1,5 +1,6 @@
 .cms-home-container
   height: 100%
+  +footer-space
   //not needed for border boxing
   //margin-top: -54px
   //padding-top: 54px
