--- a/app/styles/css/sass/pages/_initiateConference.sass
+++ b/app/styles/css/sass/pages/_initiateConference.sass
@@ -10,6 +10,7 @@
   background-color: $grey-background
   width: 100%
   padding: (3*$big-spacing) $std-side-spacing $std-top-spacing
+  +footer-space
 
 .cms-ic-conferenceIcon
   margin: $zero auto
