--- a/app/styles/css/sass/pages/_notifyTeamLeadership.sass
+++ b/app/styles/css/sass/pages/_notifyTeamLeadership.sass
@@ -28,6 +28,7 @@
 
 .cms-nl-masterContainer
   padding: $std-side-spacing
+  +footer-space
 
 .cms-nl-eventTypeContainer
   padding: $big-spacing $zero $std-small-spacing
