--- a/app/styles/css/sass/pages/_requestResiliencySupport.sass
+++ b/app/styles/css/sass/pages/_requestResiliencySupport.sass
@@ -14,6 +14,7 @@
 .cms-rrs-masterContainer
   padding: $std-side-spacing
   color: $grey7
+  +footer-space
 
 .cms-rrs-userInfoHeading
   padding-top: $std-top-spacing
