--- a/app/styles/css/sass/pages/_respondToCrisis.sass
+++ b/app/styles/css/sass/pages/_respondToCrisis.sass
@@ -16,8 +16,10 @@
 
 .cms-rc-masterContainer
   height: 100%
-  margin-top: -54px
-  padding-top: 54px
+  //margin-top: -54px
+  //padding-top: 54px
+  +footer-space
+
 
 .cms-rc-notifyLeadershipIcon
   float: left
