--- a/app/styles/css/sass/pages/_respondToCrisisLeadership.sass
+++ b/app/styles/css/sass/pages/_respondToCrisisLeadership.sass
@@ -17,8 +17,9 @@
 
 .cms-rcl-masterContainer
   height: 100%
-  margin-top: -54px
-  padding-top: 54px
+  //margin-top: -54px
+  //padding-top: 54px
+  +footer-space
 
 .cms-rcl-itemImage
   float: left
