--- a/app/styles/css/sass/pages/_scheduleAMeeting.sass
+++ b/app/styles/css/sass/pages/_scheduleAMeeting.sass
@@ -20,6 +20,7 @@
   background-color: $grey4
   width: 100%
   margin-bottom: 50px
+  +footer-space
 
 .cms-scheduleMeeting-rowContainer
   padding-top: $std-side-spacing
