--- a/app/styles/css/sass/pages/_scheduledMeeting.sass
+++ b/app/styles/css/sass/pages/_scheduledMeeting.sass
@@ -3,7 +3,7 @@
   font-size: $content_container_size
 
 .cms-sm-meetingMasterContainer
-  padding-bottom: 60px
+  +footer-space
 
 .cms-sm-meetingContainer
   padding: 16px 0 5px 15px
