--- a/app/styles/css/sass/pages/_sendAlert.sass
+++ b/app/styles/css/sass/pages/_sendAlert.sass
@@ -9,7 +9,8 @@
   @extend .separator
 
 .cms-sendAlert-pageContainer
-  padding: $big-spacing $std-side-spacing 90px
+  padding: $big-spacing $std-side-spacing
+  height: 100%
 
 .cms-sendAlert-message
   width: 100%
