--- a/app/styles/css/sass/_utils.sass
+++ b/app/styles/css/sass/_utils.sass
@@ -1,18 +1,21 @@
 =text-ellipsis
-	overflow: hidden
-	white-space: nowrap
-	text-overflow: ellipsis
+  overflow: hidden
+  white-space: nowrap
+  text-overflow: ellipsis
 	
 =text-center-n-bold
-	text-align: center
-	font-weight: bold
+  text-align: center
+  font-weight: bold
 	
 =float-right-10
-	float: right
-	margin-right: 10px
+  float: right
+  margin-right: 10px
 
 =border($color, $border-width: 1px)
-	border: $border-width solid $color
+  border: $border-width solid $color
 	
 =border-position($position,$color, $border-width: 1px)
-	border-#{$position}: $border-width solid $color
+  border-#{$position}: $border-width solid $color
+
+=footer-space
+  padding-bottom: $footer-space
