--- a/app/styles/css/sass/pages/_selectTeam.sass
+++ b/app/styles/css/sass/pages/_selectTeam.sass
@@ -2,6 +2,7 @@
   font-family: "HelveticaNeue"
   color: $black
   padding-top: 46px
+  +footer-space
 
 .cms-selectTeam-searchContainer
   height: 50px
