--- a/app/styles/css/sass/pages/_viewWalletCard.sass
+++ b/app/styles/css/sass/pages/_viewWalletCard.sass
@@ -4,12 +4,14 @@
   height: 100%
   border-bottom-width: 1px
   background-color: $grey4
+  +footer-space
 
 .cms-vwc-container
-  padding: 18px 15px 18px 15px
+  padding: $big-spacing $std-side-spacing
   background-color: $grey4
   width: 100%
   height: 100%
+
 
 .cms-vwc-profileIcon
   content: url('../../images/avataricon.svg')
