Content Scroll spacing changes

--- a/app/styles/css/sass/_base.sass
+++ b/app/styles/css/sass/_base.sass
@@ -1,14 +1,9 @@
 \::-webkit-input-placeholder
   color: $light-grey
 
-.ellipsis
-  overflow: hidden
-  white-space: nowrap
-  text-overflow: ellipsis
-
-.list-group
+/*.list-group
   padding-left: 0
-  margin-bottom: 50px
+  margin-bottom: 50px*/
 
 .list-group-item
   +border($grey3)
