--- a/app/styles/css/sass/_components.sass
+++ b/app/styles/css/sass/_components.sass
@@ -23,11 +23,14 @@
 
 .form-button
   +cms-color-button($blue2,$blue3,$white)
+  form &
+    margin: $std-top-spacing $zero
 
 .form-button-div
   text-align: center
   padding: $medium-spacing $zero
   @extend .form-button
+  margin: $std-top-spacing $zero
 
 .cms-textArea
   font-size: $content_small_size
