--- a/app/styles/css/sass/pages/_crisisListView.sass
+++ b/app/styles/css/sass/pages/_crisisListView.sass
@@ -56,7 +56,7 @@
 .cms-clv-crisisType
   font-family: $std-font-normal
   font-size: $small-content-font-size
-  @extend .ellipsis
+  +text-ellipsis
 
 .cms-clv-crisisDate, .cms-clv-crisisTime
   font-family: $std-font-normal
