--- a/app/styles/css/sass/pages/_mapView.sass
+++ b/app/styles/css/sass/pages/_mapView.sass
@@ -11,6 +11,7 @@
 
 .cms-map-popup
   @extend .flex-vcenter
+  width: 100%
 
 .cms-map-severityBadge
   content: url('../../images/warning_icon.svg')
