Moved accordion-header into components Removed multiple classes used for remaining items in the accordion content

--- a/app/styles/css/sass/_components.sass
+++ b/app/styles/css/sass/_components.sass
@@ -38,3 +38,7 @@
   color: $grey13
   padding: $std-top-spacing
   @extend .cms-base-input
+
+.cms-accordion-header
+  color: $blue
+  font-weight: bold
