Added icons.sass Renamed utils to mixins Changed around classes based on these for map, crisislist and crisis detail

--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -1,8 +1,9 @@
 @import 'sass/variables'
 @import 'sass/colors'
 @import 'sass/fonts'
-@import 'sass/utils'
-@import 'sass/components' 
+@import 'sass/_mixins'
+@import 'sass/icons'
+@import 'sass/components'
 @import 'sass/base' 
 @import 'sass/header'
 @import 'sass/footer' 
